# dio-bootcamp-bradesco-genai-assistente-financeiro

./: .env.local.example  README.md  app.py  pyproject.toml  pytest.ini  setup.py
data/: README.md
data/samples/: .gitkeep  faqs.json  faqs_exemplo.json  products.json  transacoes_exemplo.csv  transactions.csv
docs/: README.md  api_reference.md  architecture.md  use_cases.md  ux_guidelines.md
notebooks/: 01_exploracao_dados.ipynb  02_testes_calculadoras.ipynb  README.md
src/: calculators.py  context_manager.py  data_analysis.py
src/calculators/: __init__.py  calculators.py  financial_calculators.py
src/chatbot/: __init__.py  chatbot.py
src/data_analysis/: __init__.py  analyzer.py
src/database/: __init__.py  db_manager.py
src/knowledge_base/: __init__.py  faq_manager.py  product_catalog.py
src/utils/: __init__.py  formatters.py  validators.py
tests/: __init__.py  test_calculators.py  test_data_analysis.py  test_faqs.py
